# volume-compressor

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  data  plan.txt
docs/: DO_NOT_IMPLEMENT.md  EXP_chunk_model.md  EXP_curve_groups.md  INTEGRATION_PLAN.md  SPEC.md  SPEC_V2.md
harness/: ADAPTIVE_TRANSFORM_RESULTS.md  BAKEOFF_RESULTS.md  BITPLANE_RESULTS.md  BUILD_RESULTS.md  CHUNKMODEL_RESULTS.md  CURVEGROUP_RESULTS.md  DC_DPCM_RESULTS.md  DEADZONE_SWEEP_RESULTS.md  DIRECTIONAL_BASIS_RESULTS.md  EDGE_WEIGHT_RESULTS.md  EG2024_RESULTS.md  FAST_RC_RESULTS.md  HEALING_RESULTS.md  HFDIST_RESULTS.md  INTER_LOD_RESULTS.md  LEARNED_TABLES_RESULTS.md  LFNST_RESULTS.md  RATECTRL_RESULTS.md  RDOQ_RESULTS.md  SIGN_MODEL_RESULTS.md  TRANSFORM_INTERIOR_RESULTS.md  VECTOR_QUANT_RESULTS.md  ZERO_STRUCTURE_RESULTS.md  Z_ANISOTROPY_RESULTS.md  axis_corr.c  bench.c  bench_1024.c  bench_adaptive.c  bench_bitplane.c  bench_c4d_1024.cpp  bench_chunkmodel.c  bench_deadzone.c  bench_directional.c  bench_edgeweight.c  bench_healing.c  bench_hfdist.c  bench_inter_lod.c  bench_learned_tables.c  bench_lfnst.c  bench_ratectrl.c  (+23 more)
include/vc/: types.h  vc.h
src/: blocks.h  codec.c  config.h
src/chunkmodel/: blockgrid.c  blockgrid.h
src/core/: archive.h  bitio.h  chunk.h  xxhash.h
src/entropy/: bitplane.c  ctxcoef.c  rans_static.c  rice.c  rlgr.c
src/healing/: cdef.c  deblock.c  healing.h  none.c
src/metrics/: metrics.c  metrics.h
src/quant/: qmatrix16.c  qmatrix16_tuned.c  subband.c
src/ratectrl/: fixed.c  lagrangian.c  ratectrl.h
src/transform/: dct_float.c  dct_int.c  dct_int16.c  dwt_97.c  lapped16.c  lift_zfp.c
src/vc/: vc.c  vc.h
tests/: afl_decode.c  fuzz_decode.c  test_bitplane.c  test_chunkmodel.c  test_concurrent.c  test_coverage.c  test_entropy.c  test_healing.c  test_lfnst.c  test_metrics.c  test_qmatrix16.c  test_ratectrl.c  test_realdata.c  test_repack.c  test_roundtrip.c  test_streaming.c  test_transform_interior.c  test_transforms.c  test_vc.c  test_vq.c
tools/: downscale.h  vc_export_stream.c  vc_repack.c  vc_verify.c
tools/v2lab/: .gitignore  dct.h  dct_batch.h  dct_fast.h  dct_fastf.h  dct_i16.h  dct_loeffler.c  fdct_bench.c  metrics.h  rangecoder.h  v1_whole.c  v2codec.c  v2codec.h  v2lab.c  v3archive.c  v3archive.h  v3archive_api.h  v3build.c  v3dectest.c  v3enc.c  v3read.h  v3test.c  v3write.h
